--- a/index.html
+++ b/index.html
@@ -63,31 +63,71 @@
     <button class="button" id="no-button">No</button>
   </div>
   
-  <script>
+    <script>
     // JavaScript code to handle voting logic and update the progress bar
     const yesButton = document.getElementById("yes-button");
     const noButton = document.getElementById("no-button");
     const progressBar = document.getElementById("progress-bar");
 
-    // Replace the following values with your actual vote counts
-    const yesVotes = 30;
-    const totalVotes = 100;
+    // Function to send the vote data to the API Gateway endpoint
+    const sendVote = async (vote) => {
+      try {
+        const payload = { vote };
 
-    // Calculate the percentage of Yes votes
-    const percentage = (yesVotes / totalVotes) * 100;
+        const response = await fetch("<API_GATEWAY_ENDPOINT>", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+            // Include authentication headers if required
+          },
+          body: JSON.stringify(payload)
+        });
 
-    // Set the width of the progress bar based on the percentage
-    progressBar.style.width = `${percentage}%`;
+        if (!response.ok) {
+          throw new Error("Vote submission failed");
+        }
+
+        // Update the progress bar
+        await updateProgressBar();
+        console.log("Vote submitted successfully");
+      } catch (error) {
+        console.error(error);
+        alert("Vote submission failed");
+      }
+    };
+
+    // Update the progress bar based on the vote count data
+    const updateProgressBar = async () => {
+      try {
+        const response = await fetch("https://a2e6vzqkgb.execute-api.ap-northeast-1.amazonaws.com/default/phantom-vote");
+
+        if (!response.ok) {
+          throw new Error("Failed to fetch vote count");
+        }
+
+        const voteCountData = await response.json();
+        const yesVotes = voteCountData["Yes"] || 0;
+        const totalVotes = Object.values(voteCountData).reduce((acc, count) => acc + count, 0);
+        const percentage = (yesVotes / totalVotes) * 100;
+        progressBar.style.width = `${percentage}%`;
+      } catch (error) {
+        console.error(error);
+        alert("Failed to fetch vote count");
+      }
+    };
+
+    // Update the progress bar initially
+    updateProgressBar();
 
     // Event listeners for voting buttons
     yesButton.addEventListener("click", () => {
-      // Handle Yes vote
-      alert("You voted Yes!");
+      // Send Yes vote to API Gateway
+      sendVote("Yes");
     });
 
     noButton.addEventListener("click", () => {
-      // Handle No vote
-      alert("You voted No!");
+      // Send No vote to API Gateway
+      sendVote("No");
     });
   </script>
 </body>
