--- a/index.html
+++ b/index.html
@@ -1,134 +1,68 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Vote Page</title>
-  <style>
-    /* CSS styles for the elements */
-    #banner {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    #logo {
-      width: 200px;
-    }
-    #link {
-      margin-left: auto;
-      padding: 10px;
-    }
-    #progress-wrapper {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-top: 30px;
-    }
-    #progress-bar {
-      width: 300px;
-      height: 20px;
-      background-color: red;
-      margin-bottom: 10px;
-    }
-    #question {
-      width: 300px;
-    }
-    #buttons {
-      display: flex;
-      justify-content: center;
-      margin-top: 20px;
-    }
-    .button {
-      margin: 10px;
-      padding: 10px 20px;
-      background-color: #007bff;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-  </style>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        .banner {
+            background-color: red;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100px;
+        }
+        .banner img {
+            margin-right: auto;
+        }
+        #progress-bar {
+            width: 0;
+            height: 20px;
+            background-color: blue;
+        }
+        .button {
+            font-family: arial, sans-serif;
+        }
+        #progress-bar-container {
+            background-color: black;
+            width: 80%;
+            margin: auto;
+        }
+        #percentage {
+            text-align: center;
+        }
+    </style>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
 </head>
 <body>
-  <div id="banner">
-    <img id="logo" src="logo.png" alt="Logo">
-    <a id="link" href="#">Link</a>
-  </div>
-  
-  <div id="progress-wrapper">
-    <img id="question" src="question.png" alt="Question">
-    <div id="progress-bar"></div>
-  </div>
-  
-  <div id="buttons">
-    <button class="button" id="yes-button">Yes</button>
-    <button class="button" id="no-button">No</button>
-  </div>
-  
+    <div class="banner">
+        <img src="logo.png" alt="Logo">
+        <a href="#">Link</a>
+    </div>
+    <div id="progress-bar-container">
+        <div id="progress-bar"></div>
+    </div>
+    <div id="percentage"></div>
+    <button class="button" onclick="vote('Yes')">Yes</button>
+    <button class="button" onclick="vote('No')">No</button>
+
     <script>
-    // JavaScript code to handle voting logic and update the progress bar
-    const yesButton = document.getElementById("yes-button");
-    const noButton = document.getElementById("no-button");
-    const progressBar = document.getElementById("progress-bar");
-
-    // Function to send the vote data to the API Gateway endpoint
-    const sendVote = async (vote) => {
-      try {
-        const payload = { vote };
-
-        const response = await fetch("<API_GATEWAY_ENDPOINT>", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-            // Include authentication headers if required
-          },
-          body: JSON.stringify(payload)
-        });
-
-        if (!response.ok) {
-          throw new Error("Vote submission failed");
+        function updateProgressBar() {
+            $.get("https://qezrh5rdak.execute-api.ap-northeast-1.amazonaws.com/default/phantom-vote", function(data, status) {
+                var total = data.Yes + data.No;
+                var progress = (data.Yes / total) * 100;
+                $('#progress-bar').width(progress + "%");
+                $('#percentage').text(Math.round(progress) + "%");
+            });
         }
 
-        // Update the progress bar
-        await updateProgressBar();
-        console.log("Vote submitted successfully");
-      } catch (error) {
-        console.error(error);
-        alert("Vote submission failed");
-      }
-    };
-
-    // Update the progress bar based on the vote count data
-    const updateProgressBar = async () => {
-      try {
-        const response = await fetch("https://a2e6vzqkgb.execute-api.ap-northeast-1.amazonaws.com/default/phantom-vote");
-
-        if (!response.ok) {
-          throw new Error("Failed to fetch vote count");
+        function vote(option) {
+            $.post("https://qezrh5rdak.execute-api.ap-northeast-1.amazonaws.com/default/phantom-vote", { "option": option }, function() {
+                updateProgressBar();
+            });
         }
 
-        const voteCountData = await response.json();
-        const yesVotes = voteCountData["Yes"] || 0;
-        const totalVotes = Object.values(voteCountData).reduce((acc, count) => acc + count, 0);
-        const percentage = (yesVotes / totalVotes) * 100;
-        progressBar.style.width = `${percentage}%`;
-      } catch (error) {
-        console.error(error);
-        alert("Failed to fetch vote count");
-      }
-    };
-
-    // Update the progress bar initially
-    updateProgressBar();
-
-    // Event listeners for voting buttons
-    yesButton.addEventListener("click", () => {
-      // Send Yes vote to API Gateway
-      sendVote("Yes");
-    });
-
-    noButton.addEventListener("click", () => {
-      // Send No vote to API Gateway
-      sendVote("No");
-    });
-  </script>
+        updateProgressBar();  // Update the progress bar when the page loads
+    </script>
 </body>
 </html>
