--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         }
 
         function vote(option) {
-            $.post("https://qezrh5rdak.execute-api.ap-northeast-1.amazonaws.com/default/phantom-vote", { "option": option }, function() {
+            $.post("https://qezrh5rdak.execute-api.ap-northeast-1.amazonaws.com/default/phantom-vote", {"httpMethod": "POST","body": {"option": option}}, function() {
                 updateProgressBar();
             });
         }
